# deltai

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  E3N_STATUS.md  Launch E3N.bat  README.md  SECURITY.md  codeql-workspace.yml  pyproject.toml
.claude/: launch.json  settings.json
.cursor/rules/: deltai-project-boundaries.mdc  deltai-python-tests.mdc  e3n-project-boundaries.mdc  e3n-python-tests.mdc
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/codeql/deltai-python-models/: path-guard-realpath-barrier.model.yml  qlpack.yml  shell-validation-barrier.model.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  python-verify.yml  weekly-hardening.yml
app/: main.js  package-lock.json  package.json  preload.js
app/scripts/: check-electron.cjs  start-electron.js
docs/: capability-matrix.md  data-reset.md  git-workflow.md  linux-workstation-cloud-architecture.md  local-model-workflow.md
modelfiles/: E3N-nemo.modelfile  E3N-qwen14b.modelfile  E3N-qwen3b-v2.modelfile  E3N-qwen3b.modelfile  E3N.modelfile  E3N_personality.txt  E3N_personality_v2.txt  context_model.py  deltai-fallback.modelfile  deltai-nemo.modelfile  deltai-qwen14b.modelfile  deltai-qwen3b-v2.modelfile  deltai-qwen3b.modelfile  deltai.modelfile  deltai_personality.txt  deltai_personality_v2.txt  personality.md  pilot.md  protocols.md
project/: .env.example  README.md  anthropic_client.py  cli.py  collector.py  deltai_app.py  deltai_mcp_stdio.py  e3n_app.py  launch.py  main.py  mcp_bridge.py  mcp_http.py  memory.py  path_guard.py  path_safety.py  persistence.py  prompts.py  quality.py  router.py  safe_errors.py  serve.py  shell_validation.py  tool_policy.py  training.py  training_build.py  url_safety.py  voice.py  voice_legacy.py  watcher.py
project/core/: __init__.py
project/core/arch_update_guard/: __init__.py  api.py  cli.py  collector.py  guards.py  news_wiki.py  rollback.py  scheduler.py  schema.py  settings.py  tools_defs.py  tracker.py
project/deltai_api/: __init__.py  core.py  logging_setup.py
project/extensions/: README.md  __init__.py
project/extensions/appwrite_bridge/: __init__.py  api.py
project/extensions/arch_update_guard/: README.md  __init__.py  api.py  cli.py  collector.py  news_wiki.py  pacman_audit.py  snapshots.py  tools_defs.py
project/extensions/example_extension/: __init__.py
project/extensions/server_network/: __init__.py  registry.py
project/extensions/training/: README.md  __init__.py  collect_training_data.py  daily_training.py
project/extensions/workstation_cloud/: __init__.py  settings.py
project/static/: index.html
project/tests/: test_arch_guard_guards.py  test_diagnostics.py  verify_distill.py  verify_full.py  verify_resource_mgmt.py  verify_self_mgmt.py  verify_stress.py
project/tools/: __init__.py  definitions.py  executor.py
project/voice/: __init__.py  playback.py  post_processor.py  train_rvc.py  tts_engine.py  voice_config.py  voice_converter.py
scripts/: _register_task.ps1  backup_s3.py  check_local_workflow_prereqs.py  collect_training_data.py  daily_training.py  export-code-scanning-alerts.ps1  reset_deltai_data.py  setup_backup_task.ps1  setup_daily_training_task.ps1  setup_linux.sh  workstation_preflight.py  workstation_sync_manifest.py
scripts/git-hooks/: pre-push.sample
src/delta/: __init__.py  arch_guard_cli.py  config.py
src/delta/agents/: __init__.py  base.py  context.py  dev.py  file.py  shell.py  workflow.py
src/delta/cli/: __init__.py  repo_root.py  server_launch.py  terminal.py
src/delta/core/: README.md  __init__.py  plugin_manager.py  plugin_protocol.py
src/delta/daemon/: __init__.py  app.py  server.py
src/delta/integrations/: __init__.py  anthropic.py  ollama.py
src/delta/interfaces/: __init__.py  api.py  cli.py  cli_reference.py  overlay.py  status_panel.py  tray.py
src/delta/ipc/: __init__.py  unix_socket.py
src/delta/mcp/: __init__.py  stdio_launcher.py
src/delta/orchestrator/: __init__.py  context.py  core.py  intents.py
src/delta/platform/: __init__.py  context_capture.py  dbus_integration.py  systemd_integration.py
src/delta/storage/: __init__.py  db.py  memory.py  reports.py  schema.sql
src/delta_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
systemd/user/: delta-daemon.service
tests/: __init__.py  test_appwrite_bridge.py  test_arch_update_guard.py  test_arch_update_guard_extension.py  test_cli_repo_root.py  test_extensions_loader.py  test_module_path_safety.py  test_shell_validation.py  test_training_path_safety.py  test_url_safety.py
tests/delta/: __init__.py  test_ai_reports.py  test_cli.py  test_plugin_manager.py  test_scaffold.py
(+4 files in other folders)
