[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delta-assistant"
version = "0.1.0"
description = "deltai — modular Linux-first AI extension layer (local daemon, RAG, tools, optional training)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "DELTA Contributors" }
]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.44.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.27.0",
  "chromadb>=0.5.0",
  "sentence-transformers>=3.0",
  "numpy>=2.4.4",
  "scikit-learn>=1.4",
  "watchdog>=4.0",
  "psutil>=5.9",
  "pynvml>=11.5",
  "pydbus>=0.6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0"
]

[project.scripts]
delta-daemon = "delta.daemon.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "project"]
markers = [
  "slow: long-running or integration tests (excluded from default CI via -m \"not slow\")",
]
