[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delta-assistant"
version = "0.1.0"
description = "deltai — modular Linux-first AI extension layer (local daemon, RAG, tools, optional training)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "DELTA Contributors" }
]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.44.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.27.0",
  "chromadb>=0.5.0",
  "sentence-transformers>=3.0",
  "numpy>=2.4.4",
  "scikit-learn>=1.8.0",
  "watchdog>=4.0",
  "psutil>=5.9",
  "pynvml>=11.5",
  "pydbus>=0.6.0",
  "tomli-w>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.5.0",
    "mypy>=1.10.0"
]
mcp = [
    "mcp>=1.2.0",
]

[project.scripts]
delta-daemon = "delta.daemon.server:main"
deltai = "delta.interfaces.cli:main"
delta = "delta.interfaces.cli:main"
arch-update-guard = "delta.arch_guard_cli:main"
deltai-mcp = "delta.mcp.stdio_launcher:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# Training / app scripts under project/ predate strict 100-col wrapping; lint everything else.
[tool.ruff.lint.per-file-ignores]
"project/**" = ["E501"]
# main.py injects deltai_api.core's namespace dynamically via setattr; E402 imports are
# intentional (load_dotenv + configure_logging must run first); F821 names come from core.
"project/main.py" = ["E402", "F821"]
# core.py re-exports its imports into main.py's namespace via the setattr injection loop;
# the F401 "unused" imports are intentional re-exports, not dead code.
"project/deltai_api/core.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "project"]
markers = [
  "slow: long-running or integration tests (excluded from default CI via -m \"not slow\")",
]

# POSIX-only socket/IPC APIs are omitted from Windows stubs; CI runs on Linux.
[[tool.mypy.overrides]]
module = "delta.ipc.unix_socket"
disable_error_code = ["attr-defined"]
[[tool.mypy.overrides]]
module = "delta.interfaces.cli"
disable_error_code = ["attr-defined"]
[[tool.mypy.overrides]]
module = "delta.interfaces.status_panel"
disable_error_code = ["attr-defined"]
